<resources>
    <string name="app_name">fb2ls</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="crash_toast_text">Ooooops! Application error!</string>
    <string name="crash_dialog_text">Send a bug report to developer</string>
    <string name="crash_dialog_title">Error</string>
    <string name="crash_dialog_comment_prompt">You can add a comment (optional):</string>
    <string name="crash_dialog_ok_toast">Thank you!</string>


    <string name="cancel_label">Cancel</string>
    <string name="confirm_label">Select</string>
    <string name="selected_folder_label">Select folder:</string>
    <string name="create_folder_label">Create folder</string>
    <string name="create_folder_msg">Create a folder named "%1$s"?</string>
    <string name="create_folder_success">A new folder is created</string>
    <string name="create_folder_error_no_write_access">I can not write in this folder</string>
    <string name="create_folder_error_already_exists">Folder already exists</string>
    <string name="create_folder_error">Failed to create folder</string>
    <string name="up_label">Up</string>
    <string name="action_about">About</string>
    <string name="results_path">A folder with the results:</string>
    <string name="add_file">Add file</string>
    <string name="add_folder">Add folder</string>
    <string name="files_folders">Files/folders:</string>
    <string name="replace_links_text">Footnotes immediately after the reference to them</string>
    <string name="start">Start</string>

</resources>
