<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/start_btn">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".MainActivity">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/results_path"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/output_folder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/results_path"
                android:text="Large Text"
                android:onClick="selectDirClick"

                android:textAppearance="?android:attr/textAppearanceLarge"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/add_file_btn"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/add_file"
                    android:enabled="true"
                    android:onClick="selectFileClick"
                    android:src="@drawable/ic_action_file_add"

                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:scaleType="centerCrop" />

                <ImageButton
                    android:id="@+id/add_dir_btn"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/add_folder"
                    android:enabled="true"
                    android:onClick="selectDirClick"
                    android:src="@drawable/ic_action_folder_add"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:scaleType="centerCrop" />
            </LinearLayout>


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/files_folders"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="150dp"

                android:background="@drawable/border"

                android:padding="5dip">

                <ListView
                    android:id="@android:id/list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/files_folders" />
            </LinearLayout>


            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginBottom="140dp"

                android:checked="true"
                android:enabled="true"

                android:text="@string/replace_links_text" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"

        android:layout_alignParentRight="true"
        android:onClick="transformClick"
        android:text="@string/start"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ProgressBar
        android:id="@+id/view_progress"
        style="@android:style/Widget.Holo.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"

        android:focusableInTouchMode="false"
        android:visibility="gone" />

</RelativeLayout>
